--- a/lesson-2.10.html
+++ b/lesson-2.10.html
@@ -10,6 +10,17 @@
 
 <body>
     <div class="item">
+
+        <div class="box1"><div class="ligh2"><div class="str">&#8592;</div></div></div>
+        <div class="trafick">
+            <div class="ligh red"></div>
+            <div class="ligh1 yellow">
+                <span class="number">15</span>
+            </div>
+            <div class="ligh green"></div>
+        </div>
+
+
     <div class="container">
         <div class="box"><div class="ligh2"><div class="str">&#8592;</div></div></div>
         <div class="trafick">
