--- a/lesson-2.10.html
+++ b/lesson-2.10.html
@@ -11,7 +11,7 @@
 <body>
     <div class="item">
 
-        <div class="box1"><div class="ligh2"><div class="str">&#8592;</div></div></div>
+        <div class="box31"><div class="ligh2"><img src="https://cdn-icons-png.flaticon.com/512/7893/7893360.png" alt=""></div></div>
         <div class="trafick">
             <div class="ligh red"></div>
             <div class="ligh1 yellow">
